feat: update logic auth
